# finaldpbo

./: README.md  angkit.db  com.ktsabit.finaldpbo.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.ktsabit.finaldpbo.json/: init
.flatpak-builder/checksums/: x86_64-com.ktsabit.finaldpbo.json
data/: com.ktsabit.finaldpbo.desktop.in  com.ktsabit.finaldpbo.gschema.xml  com.ktsabit.finaldpbo.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  batch.vala  detail.ui  detail_window.vala  distributor.vala  edit.ui  edit_window.vala  finaldpbo.gresource.xml  httputils.vala  input.ui  input_window.vala  jsonParser.vala  main.vala  meson.build  peternakan.vala  product.ui  product_window.vala  style.css  window.ui  window.vala
src/db_utils/: db.vala
src/models/: batch.vala  distributor.vala  peternakan.vala
src/style/: style.css
src/ui/: window.ui
src/utils/: httputils.vala
